--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
     "tailwindcss": "^4.1.3",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-writer": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
