--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.3",
     "dotenv": "^16.5.0",
+    "motion-v": "^1.0.0-beta.2",
     "node-fetch": "^3.3.2",
     "pinia": "^3.0.2",
     "pinia-plugin-persistedstate": "^4.2.0",
